--- a/table view/table template 1.html
+++ b/table view/table template 1.html
@@ -27,6 +27,9 @@
         } */
 
         .table-container {
+            /* max-width: 800px;
+            width: 100%;  */
+
             overflow-x: auto;
             background: #e8dfd2;
             border-radius: 8px;
@@ -65,6 +68,7 @@
 
         table {
             /* width: 100%; */
+            
             border-collapse: separate;
             border-spacing: 10px 10px;
         }
@@ -126,7 +130,7 @@
         </div>
 
         <!-- Table -->
-        <table>
+        <table border="1" class="dataframe">
             <thead>
                 <tr>
                     <th>Name</th>
