cell class div fixed the table width

--- a/table view/table 3.html
+++ b/table view/table 3.html
@@ -75,49 +75,51 @@
 </head>
 <body>
 
-<!-- Code block -->
-<div class="code-block">
-    <span class="code-keyword">pd.read_excel</span>(<span class="code-string">'Excel_Sample.xlsx'</span>, <span class="code-keyword">sheetname</span>=<span class="code-string">'Sheet1'</span>)
-</div>
+<div class="cell">
+    <!-- Code block -->
+    <div class="code-block">
+        <span class="code-keyword">pd.read_excel</span>(<span class="code-string">'Excel_Sample.xlsx'</span>, <span class="code-keyword">sheetname</span>=<span class="code-string">'Sheet1'</span>)
+    </div>
 
-<!-- Result div containing the table -->
-<div class="result">
-    <table>
-        <thead>
-            <tr>
-                <th>a</th>
-                <th>b</th>
-                <th>c</th>
-                <th>d</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>0</td>
-                <td>1</td>
-                <td>2</td>
-                <td>3</td>
-            </tr>
-            <tr>
-                <td>4</td>
-                <td>5</td>
-                <td>6</td>
-                <td>7</td>
-            </tr>
-            <tr>
-                <td>8</td>
-                <td>9</td>
-                <td>10</td>
-                <td>11</td>
-            </tr>
-            <tr>
-                <td>12</td>
-                <td>13</td>
-                <td>14</td>
-                <td>15</td>
-            </tr>
-        </tbody>
-    </table>
+    <!-- Result div containing the table -->
+    <div class="result">
+        <table>
+            <thead>
+                <tr>
+                    <th>a</th>
+                    <th>b</th>
+                    <th>c</th>
+                    <th>d</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>0</td>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>5</td>
+                    <td>6</td>
+                    <td>7</td>
+                </tr>
+                <tr>
+                    <td>8</td>
+                    <td>9</td>
+                    <td>10</td>
+                    <td>11</td>
+                </tr>
+                <tr>
+                    <td>12</td>
+                    <td>13</td>
+                    <td>14</td>
+                    <td>15</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
 
 </body>
