--- a/table view/table 3.html
+++ b/table view/table 3.html
@@ -75,7 +75,7 @@
 </head>
 <body>
 
-<div class="cell">
+<div class="cell-block">
     <!-- Code block -->
     <div class="code-block">
         <span class="code-keyword">pd.read_excel</span>(<span class="code-string">'Excel_Sample.xlsx'</span>, <span class="code-keyword">sheetname</span>=<span class="code-string">'Sheet1'</span>)
